Applied final touches across the project: - Refined UI styling and alignment throughout all screens - Smoothed menu animations and hover effects - Improved button consistency and visibility - Cleaned up settings layout and removed unintended highlights - Stabilized screen transitions (Game <-> Main Menu) - Minor gameplay fixes and performance improvements